# pii-scanner-redactor

./: README.md  pyproject.toml
src/: cli.py  detector.py  redactor.py
tests/: test_cli.py  test_pii.py
